2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* DOM.pm (generate_structure_dump_section): Use catalog
	for human-readable texts.
	(generate_table_section): Use catalog for human readable texts.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* DOM.pm (generate_table_section): Use hierarhical table
	number for tables in subdocuments.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* DOM.pm (generate_additional_sections): Support
	for the other additional information sections are reintroduced.
	(generate_listing_section, generate_rdf_section): Reimplemented.

	* XML.pm: Typo fixed.

	* HTML.pm: Load DOMImplementation as late as possible, to
	save possiblity that another DOM implementation can be used
	where possible.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm (generate_source_string_section): Invoke
	|add_source_to_parse_error_list| method for generating a
	script fragment.

	* CSS.pm, CacheManifest.pm, DOM.pm, HTML.pm, WebIDL.pm,
	XML.pm: Use new methods for generating sections and error lists.

	* DOM.pm (generate_additional_sections, generate_table_section): New.

	* Default.pm: Pass |input| in place of |url| for unknown syntax
	error.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm: Use new method for node links.

	* CSS.pm: Typo fixes.  Pass |input| object as an argument
	to the CSSOM validation not supported error.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* Base.pm (_get_cc_url, _encode_url_component): Remove (now
	supported by WebHACC::Output).

	* CSS.pm, CacheManifest.pm, DOM.pm, Default.pm,
	HTML.pm, WebIDL.pm, XML.pm: Error reporting is now delegated to
	WebHACC::Result.

2008-07-20  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.

	* Base.pm, Default.pm, HTML.pm, XML.pm, CSS.pm,
	CacheManifest.pm, WebIDL.pom, DOM.pm: New modules.
