@@ -1,21 +1,16 @@
-Web Document Conformance Checker - TO DO
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+WebHACC - TODO
+~~~~~~~~~~~~~~
 
 * Checking
 
 - <script language=javascript> content
-- <style type=text/css> content
 - onfoo="" value
 - style="" value
 - media="" value
 - <time> content
 - <progress> content
 - <meter> content
-- <figure> content
-- <object> content
-- <meta charset> requirements
 - charset detection preparsing algorithm
-- BOM support
 - Errors and warnings in Unicode layer
 - Errors and warnings in character encoding layer
 - Warning for non-semantic class="" value
@@ -26,23 +21,9 @@ Web Document Conformance Checker - TO DO
 - Atom rel=license
 - XBL 2.0
 
-In addition, grep by "## TODO" and "## ISSUE" 
-<http://suika.fam.cx/www/markup/html/whatpm/Whatpm/HTML.pm.src>,
-<http://suika.fam.cx/www/markup/html/whatpm/Whatpm/ContentChecker.pm>,
-<http://suika.fam.cx/www/markup/html/whatpm/Whatpm/ContentChecker/Atom.pm>, and
-<http://suika.fam.cx/www/markup/html/whatpm/Whatpm/ContentChecker/HTML.pm>.
-
-** Oldies
-
 - %Color;
-- profile=""
-- rev=""
 - <font face>, <basefont face>
 - <font size>, <basefont size>
-- align="", valign="", char="", charoff=""
-- accesskey=""
-- border="", frame=""
-- cellpadding="", cellspacing="", hspace="", vspace=""
 
 and so on.
 
@@ -55,5 +36,4 @@ and so on.
 
 - Progress
 - File upload
-- Cross referencing in result
 - XML inner_html
