@@ -1,5 +1,9 @@
 2008-07-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* Base.pm, Default.pm: Updated to use newer way to construct a section.
+
+2008-07-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* DOM.pm (generate_structure_dump_section): Use catalog
 	for human-readable texts.
 	(generate_table_section): Use catalog for human readable texts.
